{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 81,
  "lineage": "dd37252d-d8c5-f638-8e45-2c0ad2fc6ba3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devjs_eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d375d622be75d66d",
            "association_id": "eipassoc-07a506ac0c71deaac",
            "domain": "vpc",
            "id": "eipalloc-0d375d622be75d66d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0c76b4ef661494185",
            "private_dns": "ip-10-0-1-56.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.56",
            "public_dns": "ec2-3-34-170-249.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.170.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devjs_eip_wordpress_sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d9d3cda92bc9a41",
            "associate_with_private_ip": "10.0.1.11",
            "association_id": "eipassoc-05cdc3c8b6524c9c1",
            "domain": "vpc",
            "id": "eipalloc-02d9d3cda92bc9a41",
            "instance": "i-05098dded84ede84b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-046cd12a1e8d51da4",
            "private_dns": "ip-10-0-1-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-13-124-215-231.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.215.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.devjs_sg",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc",
            "aws_instance.devjs_wordpress_sample",
            "aws_internet_gateway.devjs_igw",
            "aws_key_pair.devjs_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devjs_wordpress_sample",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8dfc09b22389ad",
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:instance/i-05098dded84ede84b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05098dded84ede84b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devjs_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046cd12a1e8d51da4",
            "private_dns": "ip-10-0-1-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.11",
            "public_ip": "13.124.215.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b6a4dc3954572c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000d191132a1f245e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00ab4b3e1d71c929b"
            ]
          },
          "dependencies": [
            "aws_vpc.devjs_vpc",
            "aws_key_pair.devjs_key",
            "aws_security_group.devjs_sg",
            "aws_subnet.devjs_public_subnets"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devjs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:internet-gateway/igw-04a1b8c247263a006",
            "id": "igw-04a1b8c247263a006",
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_igw"
            },
            "tags_all": {
              "Name": "devjs_igw"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devjs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:loadbalancer/app/devjs-alb/f34f9257ea312012",
            "arn_suffix": "app/devjs-alb/f34f9257ea312012",
            "dns_name": "devjs-alb-1035814290.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:loadbalancer/app/devjs-alb/f34f9257ea312012",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devjs-alb",
            "security_groups": [
              "sg-00ab4b3e1d71c929b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000d191132a1f245e"
              },
              {
                "subnet_id": "subnet-022ae4c37f0972726"
              }
            ],
            "subnets": [
              "subnet-000d191132a1f245e",
              "subnet-022ae4c37f0972726"
            ],
            "tags": {
              "Name": "devjs_alb"
            },
            "tags_all": {
              "Name": "devjs_alb"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.devjs_sg",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devjs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:listener/app/devjs-alb/f34f9257ea312012/d0393eec60fb69a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/devjs-alb-target-group/0b17461b5d97ef76",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:listener/app/devjs-alb/f34f9257ea312012/d0393eec60fb69a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:loadbalancer/app/devjs-alb/f34f9257ea312012",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devjs_alb",
            "aws_lb_target_group.devjs_alb_target_group",
            "aws_security_group.devjs_sg",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devjs_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/devjs-alb-target-group/0b17461b5d97ef76",
            "arn_suffix": "targetgroup/devjs-alb-target-group/0b17461b5d97ef76",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/devjs-alb-target-group/0b17461b5d97ef76",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devjs-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "devjs_lb_atch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/devjs-alb-target-group/0b17461b5d97ef76-20211115112050885700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/devjs-alb-target-group/0b17461b5d97ef76",
            "target_id": "i-05098dded84ede84b"
          },
          "dependencies": [
            "aws_instance.devjs_wordpress_sample",
            "aws_key_pair.devjs_key",
            "aws_lb_target_group.devjs_alb_target_group",
            "aws_security_group.devjs_sg",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "devjs_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d375d622be75d66d",
            "connectivity_type": "public",
            "id": "nat-0fe8c0d3103fc70ca",
            "network_interface_id": "eni-0c76b4ef661494185",
            "private_ip": "10.0.1.56",
            "public_ip": "3.34.170.249",
            "subnet_id": "subnet-000d191132a1f245e",
            "tags": {
              "Name": "devjs_nat"
            },
            "tags_all": {
              "Name": "devjs_nat"
            }
          },
          "dependencies": [
            "aws_eip.devjs_eip_nat",
            "aws_internet_gateway.devjs_igw",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devjs_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:route-table/rtb-0e040654fb5b77d60",
            "id": "rtb-0e040654fb5b77d60",
            "owner_id": "328720699233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fe8c0d3103fc70ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devjs_private_rt"
            },
            "tags_all": {
              "Name": "devjs_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.devjs_nat",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devjs_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:route-table/rtb-0a30c96a31c0f02a1",
            "id": "rtb-0a30c96a31c0f02a1",
            "owner_id": "328720699233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a1b8c247263a006",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devjs_public_rt"
            },
            "tags_all": {
              "Name": "devjs_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devjs_igw",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devjs_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08702ebfbea4a3e66",
            "route_table_id": "rtb-0e040654fb5b77d60",
            "subnet_id": "subnet-03b32f39065afff02"
          },
          "dependencies": [
            "aws_internet_gateway.devjs_igw",
            "aws_nat_gateway.devjs_nat",
            "aws_route_table.devjs_private_rt",
            "aws_subnet.devjs_private_subnets",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc",
            "aws_eip.devjs_eip_nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d1e86a4dfa59e48",
            "route_table_id": "rtb-0e040654fb5b77d60",
            "subnet_id": "subnet-00729d11da65c3709"
          },
          "dependencies": [
            "aws_internet_gateway.devjs_igw",
            "aws_nat_gateway.devjs_nat",
            "aws_route_table.devjs_private_rt",
            "aws_subnet.devjs_private_subnets",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc",
            "aws_eip.devjs_eip_nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devjs_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0005b61756ad46bd0",
            "route_table_id": "rtb-0a30c96a31c0f02a1",
            "subnet_id": "subnet-000d191132a1f245e"
          },
          "dependencies": [
            "aws_internet_gateway.devjs_igw",
            "aws_route_table.devjs_public_rt",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f80b351231a6153",
            "route_table_id": "rtb-0a30c96a31c0f02a1",
            "subnet_id": "subnet-022ae4c37f0972726"
          },
          "dependencies": [
            "aws_internet_gateway.devjs_igw",
            "aws_route_table.devjs_public_rt",
            "aws_subnet.devjs_public_subnets",
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devjs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:security-group/sg-00ab4b3e1d71c929b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ab4b3e1d71c929b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AllowAll",
            "name_prefix": "",
            "owner_id": "328720699233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devjs_sg"
            },
            "tags_all": {
              "Name": "devjs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devjs_private_db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-09a3a99cbfc3656a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-09a3a99cbfc3656a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_private_db_subnet_a"
            },
            "tags_all": {
              "Name": "devjs_private_db_subnet_a"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-04fcf0f53c31f951d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04fcf0f53c31f951d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_private_db_subnet_c"
            },
            "tags_all": {
              "Name": "devjs_private_db_subnet_c"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devjs_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-03b32f39065afff02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03b32f39065afff02",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_private_subnet_a"
            },
            "tags_all": {
              "Name": "devjs_private_subnet_a"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-00729d11da65c3709",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00729d11da65c3709",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_private_subnet_c"
            },
            "tags_all": {
              "Name": "devjs_private_subnet_c"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devjs_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-000d191132a1f245e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-000d191132a1f245e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_public_subnet_a"
            },
            "tags_all": {
              "Name": "devjs_public_subnet_a"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-022ae4c37f0972726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-022ae4c37f0972726",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_public_subnet_c"
            },
            "tags_all": {
              "Name": "devjs_public_subnet_c"
            },
            "vpc_id": "vpc-06ee1009f1a5db0e1"
          },
          "dependencies": [
            "aws_vpc.devjs_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devjs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:vpc/vpc-06ee1009f1a5db0e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ac528ae0686e2a5",
            "default_route_table_id": "rtb-0992297ebf0905a55",
            "default_security_group_id": "sg-050eea32d9e87827e",
            "dhcp_options_id": "dopt-dd5f11b6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06ee1009f1a5db0e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0992297ebf0905a55",
            "owner_id": "328720699233",
            "tags": {
              "Name": "devjs_vpc"
            },
            "tags_all": {
              "Name": "devjs_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}